WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164216
RTCOfferAnswerOptions does not need to be refcounted
https://bugs.webkit.org/show_bug.cgi?id=164216
Summary
RTCOfferAnswerOptions does not need to be refcounted
youenn fablet
Reported
2016-10-31 00:45:34 PDT
RTCOfferAnswerOptions does not need to be refcounted
Attachments
Patch
(23.72 KB, patch)
2016-10-31 00:49 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(24.34 KB, patch)
2016-10-31 01:03 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(24.33 KB, patch)
2016-10-31 01:12 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-yosemite
(1.19 MB, application/zip)
2016-10-31 02:03 PDT
,
Build Bot
no flags
Details
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2016-10-31 00:49:59 PDT
Created
attachment 293399
[details]
Patch
youenn fablet
Comment 2
2016-10-31 01:03:52 PDT
Created
attachment 293402
[details]
Patch
Darin Adler
Comment 3
2016-10-31 01:08:38 PDT
Comment on
attachment 293402
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=293402&action=review
> Source/WebCore/Modules/mediastream/RTCOfferAnswerOptions.h:37 > +struct RTCOfferOptions : public RTCOfferAnswerOptions {
No need for "public" when it’s a struct.
> Source/WebCore/Modules/mediastream/RTCOfferAnswerOptions.h:43 > +struct RTCAnswerOptions : public RTCOfferAnswerOptions {
Ditto.
youenn fablet
Comment 4
2016-10-31 01:12:05 PDT
Created
attachment 293403
[details]
Patch
youenn fablet
Comment 5
2016-10-31 01:12:18 PDT
(In reply to
comment #3
)
> Comment on
attachment 293402
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=293402&action=review
> > > Source/WebCore/Modules/mediastream/RTCOfferAnswerOptions.h:37 > > +struct RTCOfferOptions : public RTCOfferAnswerOptions { > > No need for "public" when it’s a struct.
Done
> > > Source/WebCore/Modules/mediastream/RTCOfferAnswerOptions.h:43 > > +struct RTCAnswerOptions : public RTCOfferAnswerOptions { > > Ditto.
Done
Build Bot
Comment 6
2016-10-31 02:03:01 PDT
Comment on
attachment 293403
[details]
Patch
Attachment 293403
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2409986
New failing tests: media/modern-media-controls/volume-support/volume-support-click.html
Build Bot
Comment 7
2016-10-31 02:03:04 PDT
Created
attachment 293407
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
WebKit Commit Bot
Comment 8
2016-10-31 06:45:38 PDT
Comment on
attachment 293403
[details]
Patch Clearing flags on attachment: 293403 Committed
r208141
: <
http://trac.webkit.org/changeset/208141
>
WebKit Commit Bot
Comment 9
2016-10-31 06:45:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug